# api/internal/domain/repository/message.go
@@ -1,0 +1,11 @@
+package repository
+
+import (
+	"context"
+
+	"github.com/katedegree99/spark/api/internal/domain/model"
+)
+
+type MessageRepository interface {
+	Create(ctx context.Context, roomID, senderUserID uint, content string) (*model.Message, error)
+}
